fix manifest, add more icons

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <meta name="application-name" content="Rainbow Lights">
         <meta name="apple-mobile-web-app-title" content="Rainbow Lights">
         <meta name="msapplication-starturl" content="/">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="theme-color" content="#9B68AB"/>
         <link rel="manifest" href="manifest.json">
         <link rel="icon" sizes="128x128" href="rainbow_128.png">
         <link rel="apple-touch-icon" sizes="128x128" href="rainbow_128.png">
