--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="msapplication-starturl" content="/">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#9B68AB"/>
-        <link rel="manifest" href="manifest.json">
+        <link rel="manifest" href="/manifest.json">
         <link rel="icon" sizes="128x128" href="rainbow_128.png">
         <link rel="apple-touch-icon" sizes="128x128" href="rainbow_128.png">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
