include non-minify lib for test

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
      });
     }
 </script>
-<script src="./NoSleep.min.js"></script>
+<script src="./NoSleep.js"></script>
 <script>
     const noSleep = new NoSleep();
     noSleep.enable();
